tests/data/placebo/test_valid_asg_with_launch_templates/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "Description": "2019-01-29T12:59:58.156Z",
        "GroupName": "task-p-4374",
        "IpPermissions": [],
        "OwnerId": "644160558196",
        "GroupId": "sg-02ec691909b2a4753",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": [],
            "UserIdGroupPairs": []
          }
        ],
        "VpcId": "vpc-d2d616b5"
      }
    ],
    "ResponseMetadata": {}
  }
}
